# maintaining-personalized-experiences-with-machine-learning

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
deployment/: run-unit-tests.sh
source/: .coveragerc  pytest.ini  requirements-dev.txt
source/aws_lambda/create_batch_inference_job/: handler.py
source/aws_lambda/create_batch_segment_job/: handler.py
source/aws_lambda/create_campaign/: handler.py
source/aws_lambda/create_config/: handler.py
source/aws_lambda/create_dataset/: handler.py
source/aws_lambda/create_dataset_group/: handler.py
source/aws_lambda/create_dataset_import_job/: handler.py
source/aws_lambda/create_event_tracker/: handler.py
source/aws_lambda/create_filter/: handler.py
source/aws_lambda/create_recommender/: handler.py
source/aws_lambda/create_schema/: handler.py
source/aws_lambda/create_solution/: handler.py
source/aws_lambda/create_timestamp/: handler.py
source/cdk_solution_helper_py/: CHANGELOG.md  README.md  requirements-dev.txt  requirements.txt
source/infrastructure/: cdk.json  deploy.py  setup.py
source/scheduler/: CHANGELOG.md  README.md
source/tests/: conftest.py  test_deploy.py  test_notifies.py  test_personalize_stack.py  test_resources.py  test_scheduler.py  test_scheduler_cli.py
source/tests/cdk_solution_helper/aws_lambda/python/fixtures/: Pipfile  pyproject.toml
source/tests/cdk_solution_helper/aws_lambda/python/fixtures/lambda/package/: setup.py
source/tests/cdk_solution_helper/aws_lambda/python/fixtures/lambda/package/minimal/: __init__.py
(+201 files in other folders)
