[tool.poetry]
name = "python-bundling"
version = "0.1.0"
description = ""
authors = ["AWS Solutions Builders"]

[tool.poetry.dependencies]
python = "^3.7"
minimal = {path = "package"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"