[tool.poetry]
name = "python-bundling"
version = "0.1.0"
description = ""
authors = ["AWS Solutions Builders"]

[tool.poetry.dependencies]
python = "^3.9"
minimal = {path = "package"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"